tests/stage2/t3_diagnostics/type_errors/unknown_function.fuse
// EXPECTED ERROR:
// unknown function

@entrypoint
fn main() {
  println(doesNotExist())
}
